--- a/src/client.html
+++ b/src/client.html
@@ -1,3 +1,5 @@
-<html><body>
-    <script src="dist/bundle.js"></script>
-</body></html>
+<html><head><link rel="icon" href="data:;base64,iVBORw0KGgo="></head>
+    <body>
+        <script src="dist/bundle.js"></script>
+    </body>
+</html>
